[package]
name = "mktestrabbitmqconsume"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
mk_lib_rabbitmq = { path = "../../src/mk_lib_rabbitmq" }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
tokio-test = "*"
