[package]
name = "mktestrocketauth"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
rocket_auth = { version = "0.4.0", features = ["sqlx-postgres"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket/", features = ["json", "secrets", "uuid"]}
rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket/", features = ["tera"]}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.12", features = [ "json", "runtime-tokio-rustls", "postgres" ] }
tera = "1.15.0"
tokio = { version = "1.28.0", features = ["full"] }

[dev-dependencies]
tokio-test = "*"
