[package]
name = "mktestroxmltree"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = 'abort'
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
async-std = "1.12.0"
chrono = "0.4.31"
flate2 = "1.0.28"
roxmltree = "0.18.1"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.21.10"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [ "chrono", "json", "runtime-tokio", "postgres", "uuid" ] }
sys-info = "0.9.1"
tar = "0.4.40"
tokio = { version = "1.35.1", features = ["full"] }
zip = "0.6.6"

[dev-dependencies]
tokio-test = "*"
